packages/lexical-playground/src/plugins/TableOfContentsPlugin/index.css
.heading2 {
  margin-left: 10px;
}

.heading3 {
  margin-left: 20px;
}

.selectedHeading {
  color: #3578e5;
}

.normalHeading {
  cursor: pointer;
  line-height: 20px;
  font-size: 16px;
}

.table-of-contents {
  color: #65676b;
  padding: 0%;
  margin-top: 10px;
  width: 120px;
  font-family: 'Lato', sans-serif;
  position: fixed;
  max-height: 290px;
  overflow: scroll;
  padding: 10px;
  border-radius: 10px;
  overflow-x: hidden;
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
}

.toc {
  border-radius: 4px;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  margin-top: 45px;
  min-height: 0;
  pointer-events: auto;
  position: absolute;
  width: 290px;
  max-height: 290px;
  overflow: scroll;
  overflow-x: hidden;
  z-index: 2;
  top: 0;
  right: 0;
}

.firstHeading {
  color: black;
  font-weight: bold;
  cursor: pointer;
}

.headings {
  list-style: none;
  margin-top: 0;
  margin-left: 10px;
  padding: 0;
}

.holder {
  border-radius: 50%;
  height: 8px;
  width: 8px;
  margin-bottom: 10px;
}

.bar,
.circles {
  height: 100%;
  position: absolute;
  width: 4px;
  top: 0;
  left: 0;
  margin-right: 8px;
}
.circles {
  z-index: 10;
  margin-top: 15px;
}

.bar {
  background-color: #ccd0d5;
  margin: 0 5px;
  width: 2px;
  border-radius: 1px;
}

.circle {
  height: 100%;
  background-color: #3578e5;
  border: solid 4px white;
  border-radius: 50%;
  height: 4px;
  width: 4px;
  display: flex;
  margin-bottom: 8px;
  justify-content: space-around;
}

